--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,3 @@
 @import './abstracts/mixins';
 @import './abstracts/variables';
-@import './base/setup';
-@import './base/font'
+@import './base/setup'
