create board, create shapes, draw shape, move shape

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,3 +1,4 @@
 @import './abstracts/mixins';
 @import './abstracts/variables';
-@import './base/setup'
+@import './base/setup';
+@import './pages/index'
